--- a/app/src/main/res/layout/cau_thu_fragment.xml
+++ b/app/src/main/res/layout/cau_thu_fragment.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <ListView
+        android:id="@+id/lvCT"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_cau_thu"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/ic_add_black_24dp"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/fab_cau_thu"
+        android:layout_gravity="end|bottom"
         android:layout_marginRight="10dp"
-        app:backgroundTint="#5a3186"
-        android:layout_gravity="end|bottom"/>
+        android:layout_marginBottom="10dp"
+        android:src="@drawable/ic_add_black_24dp"
+        app:backgroundTint="#5a3186" />
 </FrameLayout>
