--- a/app/src/main/res/layout/cau_thu_noi_bat_fragment.xml
+++ b/app/src/main/res/layout/cau_thu_noi_bat_fragment.xml
@@ -17,20 +17,20 @@
         android:layout_height="match_parent">
 
         <ListView
-            android:layout_margin="5dp"
             android:id="@+id/lvDanhsachCTNB"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_margin="5dp" />
 
         <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_danhSach"
             android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="end|bottom"
             android:layout_marginRight="10dp"
-            android:id="@+id/fab_danhSach"
-            android:src="@drawable/ic_add_black_24dp"
             android:layout_marginBottom="10dp"
-            app:backgroundTint="#5a3186"
-            android:layout_height="50dp" />
+            android:src="@drawable/ic_add_black_24dp"
+            app:backgroundTint="#5a3186" />
     </FrameLayout>
 
 </LinearLayout>
