--- a/app/src/main/res/layout/doi_hinh_fragment.xml
+++ b/app/src/main/res/layout/doi_hinh_fragment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
@@ -10,9 +10,9 @@
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#5d9ddc"
         app:tabIndicatorColor="#ff0101"
-        app:tabTextColor="#fff"
-        android:background="#5d9ddc" />
+        app:tabTextColor="#fff" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager_doihinh"
