--- a/app/src/main/res/layout/edit_ban_quan_ly.xml
+++ b/app/src/main/res/layout/edit_ban_quan_ly.xml
@@ -65,10 +65,12 @@
                     android:layout_height="50dp">
 
                     <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edit_UPDATE_MaQL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:editable="false"
+                        android:enabled="false"
                         android:hint="Mã Quản lý:"
-                        android:id="@+id/edit_UPDATE_MaQL"
                         android:textSize="15dp" />
                 </android.support.design.widget.TextInputLayout>
 
@@ -79,10 +81,10 @@
                     android:layout_marginTop="20dp">
 
                     <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edit_UPDATE_TenQL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Tên quản lý:"
-                        android:id="@+id/edit_UPDATE_TenQL"
                         android:textSize="15dp" />
                 </android.support.design.widget.TextInputLayout>
 
@@ -92,10 +94,10 @@
                     android:layout_marginTop="20dp">
 
                     <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edit_UPDATE_ChuVuQL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Chức vụ:"
-                        android:id="@+id/edit_UPDATE_ChuVuQL"
                         android:textSize="15dp" />
                 </android.support.design.widget.TextInputLayout>
 
@@ -106,10 +108,10 @@
                     android:layout_marginTop="20dp">
 
                     <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edit_UPDATE_QTQL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Quốc tịch:"
-                        android:id="@+id/edit_UPDATE_QTQL"
                         android:textSize="15dp" />
                 </android.support.design.widget.TextInputLayout>
 
@@ -120,9 +122,9 @@
                     android:layout_marginTop="20dp">
 
                     <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edit_UPDATE_LuongQL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/edit_UPDATE_LuongQL"
                         android:hint="Lương:"
                         android:inputType="number"
                         android:textSize="15dp" />
@@ -133,11 +135,11 @@
                     android:layout_height="100dp">
 
                     <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edit_UPDATE_ghichuQL"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
-                        android:hint="Ghi chú:"
-                        android:id="@+id/edit_UPDATE_ghichuQL"
                         android:gravity="bottom"
+                        android:hint="Ghi chú:"
                         android:textSize="15dp" />
                 </android.support.design.widget.TextInputLayout>
 
@@ -160,21 +162,21 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/bt_UPDATE_Them_QL"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Thêm"
-                    android:id="@+id/bt_UPDATE_Them_QL"
+                    android:text="Update"
                     android:textAllCaps="false"
                     android:textColor="#37196e" />
 
                 <Button
+                    android:id="@+id/bt_UPDATE_Huy_QL"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_weight="1"
                     android:text="Huỷ"
-                    android:id="@+id/bt_UPDATE_Huy_QL"
                     android:textAllCaps="false"
                     android:textColor="#37196e" />
             </LinearLayout>
