--- a/app/src/main/res/layout/edit_cau_thu.xml
+++ b/app/src/main/res/layout/edit_cau_thu.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".add.ThemDanhSach">
-
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#2d2196">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -19,7 +18,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/show_cau_thu_noi_bat"
+                android:id="@+id/show_UPDATE_cau_thu"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/show" />
@@ -33,7 +32,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Thêm cầu thủ nổi bật"
+                    android:text="Update Cầu thủ"
                     android:textColor="#fff"
                     android:textSize="20dp" />
             </RelativeLayout>
@@ -41,12 +40,10 @@
 
     </android.support.v7.widget.Toolbar>
 
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp">
+        android:layout_margin="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -66,13 +63,13 @@
                     android:layout_height="50dp">
 
                     <android.support.design.widget.TextInputEditText
-                        android:id="@+id/editMaCTNB"
+                        android:id="@+id/edit_UPDATE_maCT"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Mã cầu thủ:"
+                        android:enabled="false"
+                        android:hint="Mã Cầu thủ:"
                         android:textSize="15dp" />
                 </android.support.design.widget.TextInputLayout>
-
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
@@ -80,7 +77,7 @@
                     android:layout_marginTop="20dp">
 
                     <android.support.design.widget.TextInputEditText
-                        android:id="@+id/editTenCTNB"
+                        android:id="@+id/edit_UPDATE_TenCT"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Tên cầu thủ:"
@@ -93,7 +90,20 @@
                     android:layout_marginTop="20dp">
 
                     <android.support.design.widget.TextInputEditText
-                        android:id="@+id/editVTCTNB"
+                        android:id="@+id/edit_UPDATE_ChisoCT"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Chỉ số cầu thủ:"
+                        android:textSize="15dp" />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="20dp">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edit_UPDATE_VTCT"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Vị trí:"
@@ -106,35 +116,20 @@
                     android:layout_marginTop="20dp">
 
                     <android.support.design.widget.TextInputEditText
-                        android:id="@+id/editQTCTNB"
+                        android:id="@+id/edit_UPDATE_QTCT"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Quốc tịch:"
                         android:textSize="15dp" />
                 </android.support.design.widget.TextInputLayout>
 
-
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginTop="20dp">
 
                     <android.support.design.widget.TextInputEditText
-                        android:id="@+id/editChiSCTNB"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Chỉ số:"
-                        android:inputType="number"
-                        android:textSize="15dp" />
-                </android.support.design.widget.TextInputLayout>
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="20dp">
-
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/editGiaCTNB"
+                        android:id="@+id/edit_UPDATE_GiaCT"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Gía cầu thủ:"
@@ -142,9 +137,20 @@
                         android:textSize="15dp" />
                 </android.support.design.widget.TextInputLayout>
 
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/edit_UPDATE_GhiChuCT"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:gravity="bottom"
+                        android:hint="Ghi chú:"
+                        android:textSize="15dp" />
+                </android.support.design.widget.TextInputLayout>
 
                 <Button
-                    android:id="@+id/editChonAnhCTNB"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -158,21 +164,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginRight="30dp"
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btThemCauThu_nb"
+                    android:id="@+id/bt_UPDATE_ThemCT"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Thêm"
+                    android:text="Update"
                     android:textAllCaps="false"
                     android:textColor="#37196e" />
 
                 <Button
-                    android:id="@+id/btHuy_CTNB"
+                    android:id="@+id/bt_UPDATE_HuyCT"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -181,7 +187,6 @@
                     android:textAllCaps="false"
                     android:textColor="#37196e" />
             </LinearLayout>
-
 
         </LinearLayout>
     </ScrollView>
