--- a/app/src/main/res/layout/edit_cau_thu_noi_bat.xml
+++ b/app/src/main/res/layout/edit_cau_thu_noi_bat.xml
@@ -42,10 +42,10 @@
 
 
     <ScrollView
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -68,6 +68,7 @@
                         android:id="@+id/edit_sua_MaCTNB"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:enabled="false"
                         android:hint="Mã cầu thủ:"
                         android:textSize="15dp" />
                 </android.support.design.widget.TextInputLayout>
@@ -140,7 +141,6 @@
                         android:inputType="number"
                         android:textSize="15dp" />
                 </android.support.design.widget.TextInputLayout>
-
 
 
             </LinearLayout>
