--- a/app/src/main/res/layout/edit_doi_hinh_chinh.xml
+++ b/app/src/main/res/layout/edit_doi_hinh_chinh.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".add.ThemDoiHinhChinh">
+    android:orientation="vertical">
 
 
     <android.support.v7.widget.Toolbar
@@ -19,7 +18,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/show_doi_Hinh_chinh"
+                android:id="@+id/show_doi_UPDATE_Hinh_chinh"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/show" />
@@ -60,9 +59,10 @@
                 android:layout_height="50dp">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editMaDHC"
+                    android:id="@+id/editMa_UPDATE_DHC"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:enabled="false"
                     android:hint="Mã cầu thủ:"
                     android:textSize="15dp" />
             </android.support.design.widget.TextInputLayout>
@@ -73,7 +73,7 @@
                 android:layout_marginTop="10dp">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editTenDHC"
+                    android:id="@+id/editTen_UPDATE_DHC"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Tên cầu thủ:"
@@ -86,7 +86,7 @@
                 android:layout_marginTop="10dp">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editVTDHC"
+                    android:id="@+id/editVT_UPDATE_DHC"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Vị trí:"
@@ -99,7 +99,7 @@
                 android:layout_marginTop="10dp">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editCSDHC"
+                    android:id="@+id/editCS_UPDATE_DHC"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Chỉ số cầu thủ:"
@@ -114,7 +114,7 @@
                 android:layout_marginTop="10dp">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editQTDHC"
+                    android:id="@+id/editQT_UPDATE_DHC"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Quốc tịch:"
@@ -128,7 +128,7 @@
                 android:layout_marginTop="10dp">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editGiaDHC"
+                    android:id="@+id/editGia_UPDATE_DHC"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Gía cầu thủ:"
@@ -154,16 +154,16 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btThemDHC"
+                android:id="@+id/btThem_UPDATE_DHC"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Thêm"
+                android:text="Update"
                 android:textAllCaps="false"
                 android:textColor="#2d184e" />
 
             <Button
-                android:id="@+id/btHuyDHC"
+                android:id="@+id/btHuy_UPDATE_DHC"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
