--- a/app/src/main/res/layout/edit_doi_hinh_phu.xml
+++ b/app/src/main/res/layout/edit_doi_hinh_phu.xml
@@ -19,7 +19,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/show_doi_Hinh_chinh"
+                android:id="@+id/show_UPDATE_doi_hinh_phu"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/show" />
@@ -33,7 +33,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Thêm đội hình chính"
+                    android:text="Thêm Đội hình phụ"
                     android:textColor="#fff"
                     android:textSize="20dp" />
             </RelativeLayout>
@@ -41,17 +41,17 @@
 
     </android.support.v7.widget.Toolbar>
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="20dp"
         android:gravity="center"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
             android:orientation="vertical">
 
 
@@ -60,9 +60,10 @@
                 android:layout_height="50dp">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editMaDHC"
+                    android:id="@+id/edit_UPDATE_MaDHP"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:enabled="false"
                     android:hint="Mã cầu thủ:"
                     android:textSize="15dp" />
             </android.support.design.widget.TextInputLayout>
@@ -73,7 +74,7 @@
                 android:layout_marginTop="10dp">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editTenDHC"
+                    android:id="@+id/edit_UPDATE_TenDHP"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Tên cầu thủ:"
@@ -86,7 +87,7 @@
                 android:layout_marginTop="10dp">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editVTDHC"
+                    android:id="@+id/edit_UPDATE_VitriDHP"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Vị trí:"
@@ -99,11 +100,10 @@
                 android:layout_marginTop="10dp">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editCSDHC"
+                    android:id="@+id/edit_UPDATE_CSDHP"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Chỉ số cầu thủ:"
-                    android:inputType="number"
                     android:textSize="15dp" />
             </android.support.design.widget.TextInputLayout>
 
@@ -114,7 +114,7 @@
                 android:layout_marginTop="10dp">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editQTDHC"
+                    android:id="@+id/editQTDHP"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Quốc tịch:"
@@ -128,11 +128,10 @@
                 android:layout_marginTop="10dp">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editGiaDHC"
+                    android:id="@+id/edit_UPDATE_GCTDHP"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Gía cầu thủ:"
-                    android:inputType="number"
                     android:textSize="15dp" />
             </android.support.design.widget.TextInputLayout>
 
@@ -150,20 +149,22 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="30dp"
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btThemDHC"
+                android:id="@+id/bt_UPDATE_ThemDHP"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Thêm"
+                android:text="Update"
                 android:textAllCaps="false"
                 android:textColor="#2d184e" />
 
             <Button
-                android:id="@+id/btHuyDHC"
+                android:id="@+id/btHUYDHP"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -174,4 +175,5 @@
         </LinearLayout>
 
     </LinearLayout>
+
 </LinearLayout>
