--- a/app/src/main/res/layout/them_doi_hinh_phu.xml
+++ b/app/src/main/res/layout/them_doi_hinh_phu.xml
@@ -60,6 +60,7 @@
                 android:layout_height="50dp">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/editMaDHP"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Mã cầu thủ:"
@@ -68,10 +69,11 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_marginTop="10dp"
-                android:layout_height="50dp">
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/editTenDHP"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Tên cầu thủ:"
@@ -80,10 +82,24 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_marginTop="10dp"
-                android:layout_height="50dp">
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/editVitriDHP"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Vị trí:"
+                    android:textSize="15dp" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/editCSDHP"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Chỉ số cầu thủ:"
@@ -93,10 +109,11 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_marginTop="10dp"
-                android:layout_height="50dp">
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/editQTDHP"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Quốc tịch:"
@@ -106,10 +123,11 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_marginTop="10dp"
-                android:layout_height="50dp">
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/editGCTDHP"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Gía cầu thủ:"
@@ -136,6 +154,7 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/btThemDHP"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -144,6 +163,7 @@
                 android:textColor="#2d184e" />
 
             <Button
+                android:id="@+id/btHUYDHP"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
